crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@214.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into hp values (null, null, 0);"
---
InsertStmt@0..38
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "hp"
  Whitespace@14..15 " "
  SelectStmt@15..36
    Values@15..21 "values"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..36
      AConst@23..27
        NullP@23..27 "null"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..33
        NullP@29..33 "null"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..36
        Iconst@35..36 "0"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

