crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@215.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into hp values (1, null, 1);"
---
InsertStmt@0..35
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "hp"
  Whitespace@14..15 " "
  SelectStmt@15..33
    Values@15..21 "values"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..33
      AConst@23..24
        Iconst@23..24 "1"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      AConst@26..30
        NullP@26..30 "null"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..33
        Iconst@32..33 "1"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

