crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@216.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into hp values (1, 'xxx', 2);"
---
InsertStmt@0..36
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "hp"
  Whitespace@14..15 " "
  SelectStmt@15..34
    Values@15..21 "values"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..34
      AConst@23..24
        Iconst@23..24 "1"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      AConst@26..31
        Sconst@26..31 "'xxx'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..34
        Iconst@33..34 "2"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

