crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@219.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into hp values (1, 'abcde', 5);"
---
InsertStmt@0..38
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "hp"
  Whitespace@14..15 " "
  SelectStmt@15..36
    Values@15..21 "values"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..36
      AConst@23..24
        Iconst@23..24 "1"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      AConst@26..33
        Sconst@26..33 "'abcde'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..36
        Iconst@35..36 "5"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

