crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@24.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table coll_pruning_def partition of coll_pruning default;
---
CreateStmt@0..64
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..29
    Ident@13..29 "coll_pruning_def"
  Whitespace@29..30 " "
  Partition@30..39 "partition"
  Whitespace@39..40 " "
  Of@40..42 "of"
  Whitespace@42..43 " "
  RangeVar@43..55
    Ident@43..55 "coll_pruning"
  Whitespace@55..56 " "
  PartitionBoundSpec@56..63
    Default@56..63 "default"
  Ascii59@63..64 ";"

